--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,23 @@
 
 {
-  "short_name": "bliki",
-  "name": "bliki",
-  "description": "&lt;a href=\&quot;https://kosalanuwan.github.io\&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer notes for himself. This bliki, its content, and opinions are his own.",
+  "short_name": "journal",
+  "name": "journal",
+  "description": "&lt;a href=\&quot;https://kosalanuwan.github.io\&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer notes for himself. This journal, its content, and opinions are his own.",
   "icons": [
     {
-      "src": "/bliki/splash-512x512.png",
+      "src": "/journal/splash-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/bliki/favicon-192x192.png",
+      "src": "/journal/favicon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
   ],
-  "start_url": "/bliki/",
+  "start_url": "/journal/",
   "background_color": "#ffffff",
   "display": "standalone",
-  "scope": "/bliki/",
+  "scope": "/journal/",
   "theme_color": "#ffffff"
 }
